app/assets/stylesheets/_top_bar.scss
@import 'constants.scss';

$top-bar-height: 52px;

.top-bar {
    background-color: $color-plendit-blue;
    min-height: $top-bar-height;
    padding: 10px 12px 0 12px;
    color: white;

    &--overlaid {
        @media screen and (min-width: 640px) {
            position: absolute;
            top: 0;
            width: 100%;
            z-index: 199;
            background-color: rgba(42, 150, 255, 0.7);
        }
    }

    &__form {
        display: inline;
    }

    &__search-holder {
        background-color: white;
        padding: 4px;
        margin-left: 12px;
        border: solid thin $color-box-border;

    }
    
    & &__search-input {
        color: black;
        border: none;
        height: 24px;
        margin: 0;
        vertical-align: baseline;

        @media screen and (max-width: 640px) {
            width: 44%;
        }
    }

    &__search-icon {
        vertical-align: middle;
        bottom: 3px;
    }

    &__logo-link {
        &:hover {
            text-decoration: none;
        }
    }

    &__logo {
        vertical-align: middle;
        @media screen and (max-width: 640px) {
            width: 38%;
        }
    }

    &__rightbox {
        display: block;
        float: right;
        height: 38px;
        line-height: 38px;


        @media screen and (max-width: 640px) {
            float: none;
        }
    }

    &__navbar-link {
        color: white;
    }

    &__avatar {
        vertical-align: middle;
        margin-bottom: 5px;
    }
    
    &__notification-count {
        height: 18px;
        min-width: 18px;
        line-height: 18px;
        font-size: 11px;
        border-radius: 18px;
        padding-left: 3px;
        padding-right: 3px;
        background-color: #e7384a;
        display: inline-block;
        position: relative;
        top: -10px;
        left: -4px;
        text-align: center;
    }

    &__top-section {
        margin-left: $standard-spacing / 2;
        margin-right: $standard-spacing / 2;
        color: white;
    }

    &__admin-link {
        background-color: red;
        color: white;
        border-radius: 6px;
        padding: 6px;
    }

}

